# zappy

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Makefile  README.md  docusaurus.config.js  package-lock.json  package.json  run.sh
src/ai/: .gitignore  BOTS.md  Bot.cpp  Bot.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Constants.hpp  Main.cpp  README.md  config.txt
src/ai/Documentation/: BOTS.md  BotArchives.md
src/ai/actions/: Actions.cpp  Actions.hpp  LastAction.hpp
src/ai/archives/: ABotProbabilistic.cpp  ABotProbabilistic.hpp  BotProbabilistic.cpp  BotProbabilistic.hpp
src/ai/archives/training/: TrainedVariable.cpp  TrainedVariable.hpp  Training.cpp
src/ai/assets/: help.txt
src/ai/behaviors/: Behavior.cpp  Behavior.hpp
src/ai/bonus/: printActionsGraph.py  printBehaviorsGraph.py
src/ai/config/: config.txt  config_trained.txt
src/ai/dataSaved/: actionsteam10.txt  actionsteam11.txt  actionsteam12.txt  actionsteam13.txt  actionsteam14.txt  actionsteam15.txt  behaviors.txt
src/ai/debug/: Debug.cpp
src/ai/decisionTree/: DecisionTree.hpp  DecisionTreep.cpp
src/ai/documentation/: BOTS.md  BOTSML.md  BOTS_CODE.md  BOTS_STRATEGIES.Md
src/ai/environement/: Environement.cpp  Environement.hpp  Tile.hpp
src/ai/message/: Message.cpp  Message.hpp
src/ai/ressources/: Ressources.cpp  Ressources.hpp
src/ai/run/listeners/: ListenForkResponse.cpp  ListenForwardResponse.cpp  ListenLookResponse.cpp  ListenTakeResponse.cpp
src/ai/run/patterns/: SearchAndTake.cpp  Survive.cpp  TestPattern.cpp
src/ai/run/patterns/SearchRessources/: Survive.cpp
src/ai/src/: ABot.hpp  ABotProbabilistic.cpp  ABotProbabilistic.hpp  Bot.cpp  Bot.hpp  Client.cpp  Client.hpp  Constants.hpp  IBot.hpp  Main.cpp  main.cpp
src/ai/src/actions/: Action.cpp  Action.hpp  Actions.cpp  Actions.hpp  LastAction.cpp
src/ai/src/behaviors/: Behavior.cpp  Behavior.hpp
src/ai/src/botFactory/: BotFactory.cpp  BotFactory.hpp
src/ai/src/bots/: ABot.cpp  ABot.hpp  ABotPattern.cpp  ABotPattern.hpp  ABotProbabilistic.cpp  ABotProbabilistic.hpp  Bot.cpp  Bot.hpp  BotProbabilistic.cpp  BotProbabilistic.hpp  EvoBot.cpp  EvoBot.hpp  Forker.cpp  Forker.hpp  IBot.hpp  SimpleBot.cpp  SimpleBot.hpp  Slave.cpp  Slave.hpp
src/ai/src/bots/utils/: ABotPatternUtils.cpp
src/ai/src/bots/verifications/: IsConcernedByIncantation.cpp
src/ai/src/client/: Client.cpp  Client.hpp
src/ai/src/constant/: Constants.hpp
src/ai/src/debug/: Debug.cpp
src/ai/src/environement/: Environement.hpp
src/ai/src/environment/: Environment.cpp  Environment.hpp  Tile.cpp  Tile.hpp
src/ai/src/hash/: Pairhash.hpp
src/ai/src/message/: Message.cpp  Message.hpp
src/ai/src/pattern/: Pattern.cpp  Pattern.hpp  PatternProbabilistic.hpp  PatternProbabilitistic.cpp
src/ai/src/ressources/: Ressources.cpp  Ressources.hpp
src/ai/src/run/listeners/: ListenBroadcastResponse.cpp  ListenForkResponse.cpp  ListenForwardResponse.cpp  ListenIncantation.cpp  ListenLookResponse.cpp  ListenTakeResponse.cpp  listenCancel.cpp  listenConnectNbrResponse.cpp  listenFirstResponse.cpp  listenInventoryResponse.cpp
src/ai/src/run/patterns/: Group.cpp  Incantation.cpp  RunToLinemate.cpp  TestPattern.cpp  forkBot.cpp
src/ai/src/state/: BotState.cpp  BotState.hpp
src/ai/src/training/: Probability.hpp  Training.cpp  Traning.cpp  training.py
src/ai/src/utils/: DisplayHelp.cpp  DisplayHelp.hpp  Initializer.cpp  Initializer.hpp  PrintColor.cpp  PrintColor.hpp  StringUtils.cpp  StringUtils.hpp
src/ai/state/: BotState.cpp  BotState.hpp
src/ai/tests/: CMakeLists.txt  run.sh
src/ai/tests/src/: testBot.cpp
src/ai/training/: Probability.cpp  Traning.cpp
src/ai/utils/: PrintColor.cpp  PrintColor.hpp
src/gui/: CMakeLists.txt
src/gui/src/: Broadcast.hpp  Data.cpp  Data.hpp  Egg.hpp  GuiException.hpp  Incantation.hpp  Main.cpp  Map.cpp  Map.hpp  Parser.cpp  Parser.hpp  Player.cpp  Player.hpp  Select.cpp  Select.hpp  ServerConnect.cpp  ServerConnect.hpp  broadcast.hpp  data.hpp  egg.hpp  guiException.hpp  incantation.hpp  main.cpp  map.cpp  map.hpp  parser.cpp  parser.hpp  player.hpp  serverConnect.hpp
src/gui/src/core/: Core.cpp  Core.hpp  Zappy.hpp  core.hpp  zappy.hpp
src/gui/src/error/: ErrorWindow.hpp
src/gui/src/parser/: Broadcast.cpp  Broadcast.hpp  Data.cpp  Data.hpp  Egg.cpp  Egg.hpp  Incantation.hpp  Map.cpp  Map.hpp  Parser.cpp  Parser.hpp  Player.cpp  Player.hpp  Select.cpp  ServerConnect.cpp  ServerConnect.hpp
src/gui/src/render/core/: Core.cpp  Core.hpp  Setting.hpp  Zappy.cpp  Zappy.hpp
src/gui/src/render/scenes/: Home.cpp  Home.hpp  IScene.hpp  Menu.cpp  Menu.hpp  Quit.cpp  Quit.hpp  (+3 more)
src/gui/src/scenes/: IScene.hpp  Quit.cpp  Quit.hpp  home.hpp  menu.hpp  quit.hpp
src/gui/src/sprites/: sprite.hpp
src/gui/src/ui/: IButton.hpp  Input.cpp  Input.hpp  button.hpp  input.hpp
src/gui/src/utils/: CommandLineParser.cpp  CommandLineParser.hpp  Debug.hpp  Exception.hpp  GuiException.hpp  Lerp.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Random.hpp  Switch.hpp
src/gui/src/world/: chunck.hpp  world.hpp
src/gui/tests/: CMakeLists.txt
src/gui/tests/src/: Player.cpp  TestBroadcast.cpp  TestCommandLineParser.cpp  TestData.cpp  TestEgg.cpp  TestIncantation.cpp  TestMap.cpp  TestParser.cpp  TestParserException.cpp  TestPlayer.cpp  TestSelect.cpp  TestServerConnect.cpp
src/server/: CMakeLists.txt
src/server/includes/: client.h  flags.h  server.h  unused.h  utils.h
src/server/src/: death.c  destroy.c  eggs.c  init.c  main.c  meteors.c  resouces.c  server.c  teams.c
src/server/src/client/: handler.c  lists.c
src/server/src/commands/: broadcast.c  connect_nbr.c  connector.c  eject.c  fork.c  forward.c  handler.c  incantation.c  inventory.c  left.c  look.c  message_to_graphicals.c  right.c  set.c  take.c
src/server/src/team/: lists.c
src/server/src/utils/: arrays.c  asprintf_response.c  client.c  flags.c  free.c  helper.c  map.c  rand.c  str_to_array.c  str_utils.c  strings.c  teams.c
src/server/tests/: CMakeLists.txt  commands-queue.sh  load_testing  test.sh
src/server/tests/src/: basics.c  test_teams.c
(+188 files in other folders)
